--- a/languages/newspaper-lite.pot
+++ b/languages/newspaper-lite.pot
@@ -1,14 +1,14 @@
-# Copyright (C) 2018 
+# Copyright (C) 2019 
 # This file is distributed under the same license as the  package.
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"Report-Msgid-Bugs-To: mirrorgridofficial@gmail.com\n"
-"POT-Creation-Date: 2018-12-31 03:45:42+00:00\n"
+"Report-Msgid-Bugs-To: themecentury@gmail.com\n"
+"POT-Creation-Date: 2019-03-09 16:10:41+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2018-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2019-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <EMAIL@ADDRESS>\n"
 "X-Generator: grunt-wp-i18n1.0.0\n"
@@ -350,7 +350,7 @@ msgstr ""
 
 #: core/admin/class-newspaper-lite-admin.php:528
 #: core/admin/class-newspaper-lite-admin.php:532
-msgid " by Mirrorgrid Store"
+msgid " by themecentury"
 msgstr ""
 
 #: core/admin/class-newspaper-lite-admin.php:531
